--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-/***********
-General Style
-************/
+
+/**************
+GENERAL STYLE
+**************/
 
 h1 {
 	text-align: center;
@@ -9,9 +10,40 @@ h1 {
 }
 
 section {
-  border-bottom: 1.5px black solid;
   padding-top: 2%;
-	border:none;
+	border-bottom: 1.5px black solid;
 	padding-bottom: 2%;
+}
 
+
+/**************
+HEADING
+**************/
+
+.title {
+	font-family: 'Roboto', sans-serif;
+	font-weight: 500;
+	margin-left: 2%;
+	margin-top: 0%;
+}
+
+/**************
+CONTENT
+**************/
+
+#flexContainer {
+	display: flex;
+}
+
+a {
+	margin-left: 2%;
+  padding-top: 4%;
+	color: black;
+
+}
+
+#textContent {
+	width: 50%;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 200;
 }
